After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759521 - Fails to build from Git after Grilo API break
Fails to build from Git after Grilo API break
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-12-16 00:40 UTC by Emmanuele Bassi (:ebassi)
Modified: 2015-12-16 11:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
application: Adapt to Grilo 0.3.0 API changes (1.42 KB, patch)
2015-12-16 11:41 UTC, Debarshi Ray
committed Details | Review

Description Emmanuele Bassi (:ebassi) 2015-12-16 00:40:26 UTC
Grilo broke its API in this commit:

  https://git.gnome.org/browse/grilo/commit/?id=9c476361a804c26b4d47de94b3bb94c63f56fbf0

GNOME Photos needs to be updated.
Comment 1 Emmanuele Bassi (:ebassi) 2015-12-16 00:41:53 UTC
I've tagged grilo and grilo-plugins in GNOME Continuous to keep building.
Comment 2 Debarshi Ray 2015-12-16 11:41:40 UTC
Created attachment 317494 [details] [review]
application: Adapt to Grilo 0.3.0 API changes
Comment 3 Debarshi Ray 2015-12-16 11:45:08 UTC
Comment on attachment 317494 [details] [review]
application: Adapt to Grilo 0.3.0 API changes

Pushed to master.
Comment 4 Debarshi Ray 2015-12-16 11:45:22 UTC
Thanks for the heads up!