application: Adapt to Grilo 0.3.0 API changes

https://bugzilla.gnome.org/show_bug.cgi?id=759521